--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   pointer-events: none;
 }
 
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -42,6 +43,27 @@
   max-width: 310px;
   margin: auto;
   text-align: left;
+}
+.edit-form{
+  background: white;
+    padding: 20px;
+    opacity: 1;
+    margin-top: 30px;
+    border-radius: 10px;
+}
+
+.edit-form .header{
+  margin: 0;
+    font-size: 14px;
+}
+.modal{
+  background-color:#0000007a;
+  position:fixed;
+  width:100%;
+  height:100%;
+  top:0px;
+  left:0px;
+  z-index:1000;
 }
 
 .label{
@@ -85,7 +107,7 @@
 /* Note styles */
 
 .note{
-  max-width: 200px;
+  width: 200px;
   height: 100px;
   background-color: rgb(243,243,243);
   text-align: left;
